@@ -1,14 +1,16 @@
-from django.forms.widgets import Select
 from django.utils.translation import ugettext_lazy as _
 
 from mapentity.filters import YearFilter
 from geotrek.land.filters import EdgeStructureRelatedFilterSet
+from geotrek.maintenance.filters import InterventionYearSelect
 
 from .models import INFRASTRUCTURE_TYPES, Infrastructure, Signage
 
 
 class InfrastructureFilter(EdgeStructureRelatedFilterSet):
-    intervention_year = YearFilter(name='interventions_set__date', widget=Select, label=_(u"Intervention year"))
+    intervention_year = YearFilter(name='interventions_set__date',
+                                   widget=InterventionYearSelect,
+                                   label=_(u"Intervention year"))
 
     def __init__(self, *args, **kwargs):
         super(InfrastructureFilter, self).__init__(*args, **kwargs)
@@ -21,7 +23,9 @@ class InfrastructureFilter(EdgeStructureRelatedFilterSet):
 
 
 class SignageFilter(EdgeStructureRelatedFilterSet):
-    intervention_year = YearFilter(name='interventions_set__date', widget=Select, label=_(u"Intervention year"))
+    intervention_year = YearFilter(name='interventions_set__date',
+                                   widget=InterventionYearSelect,
+                                   label=_(u"Intervention year"))
 
     def __init__(self, *args, **kwargs):
         super(SignageFilter, self).__init__(*args, **kwargs)
