@@ -18,9 +18,17 @@ class PolygonTopologyFilter(PolygonFilter):
         return qs.filter(**{'%s__in' % self.name: inner_qs})
 
 
+class InterventionYearSelect(Select):
+    def render_options(self, *args, **kwargs):
+        all_dates = Intervention.objects.existing().values_list('date', flat=True)
+        all_years = list(reversed(sorted(set([d.year for d in all_dates]))))
+        self.choices = list(enumerate([self.choices[0][1]] + all_years))
+        return super(InterventionYearSelect, self).render_options(*args, **kwargs)
+
+
 class InterventionFilter(EdgeStructureRelatedFilterSet):
     bbox = PolygonTopologyFilter(name='topology', lookup_type='intersects')
-    year = YearFilter(name='date', widget=Select, label=_(u"Year"))
+    year = YearFilter(name='date', widget=InterventionYearSelect, label=_(u"Year"))
 
     class Meta(EdgeStructureRelatedFilterSet.Meta):
         model = Intervention
@@ -29,9 +37,21 @@ class InterventionFilter(EdgeStructureRelatedFilterSet):
         ]
 
 
+class ProjectYearSelect(Select):
+    def render_options(self, *args, **kwargs):
+        all_years = []
+        for p in Project.objects.existing():
+            all_years.append(p.begin_year)
+            all_years.append(p.end_year)
+        all_years = list(reversed(sorted(set(all_years))))
+        self.choices = list(enumerate([self.choices[0][1]] + all_years))
+        return super(ProjectYearSelect, self).render_options(*args, **kwargs)
+
+
 class ProjectFilter(EdgeStructureRelatedFilterSet):
     bbox = PythonPolygonFilter(name='geom')
-    in_year = YearBetweenFilter(name=('begin_year', 'end_year'), widget=Select,
+    in_year = YearBetweenFilter(name=('begin_year', 'end_year'),
+                                widget=ProjectYearSelect,
                                 label=_(u"Year of activity"))
 
     class Meta(EdgeStructureRelatedFilterSet.Meta):
